# Technology-of-Programming

./: CMakeLists.txt  README.md
2_sem_tp/1_task pattern/: CMakeLists.txt  run.cpp  source.cpp
2_sem_tp/1_task pattern/include/: ArmyBuilder.h  ArmyFactory.cpp
2_sem_tp/1_task pattern/src/: Army.cpp  Game.cpp  User.cpp
include/: Army.h  ArmyBuilder.h  ArmyFactory.h  ArmyUnit.h  Game.h  Side.h  User.h
src/: Army.cpp  ArmyBuilder.cpp  ArmyFactory.cpp  ArmyUnit.cpp  Game.cpp  User.cpp
